# EldenOps

./: .env.example  .gitignore  Dockerfile  README.md  TODO.md  alembic.ini  pyproject.toml  railway.toml
alembic/: env.py
alembic/versions/: 001_add_github_token_to_tenant.py  b24c2980faad_add_project_and_team_mapping_tables.py
dashboard/: .env.example  next.config.js  package-lock.json  package.json  tailwind.config.ts
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/app/dashboard/: layout.tsx  page.tsx
dashboard/src/app/login/: page.tsx
dashboard/src/components/: providers.tsx
dashboard/src/components/charts/: activity-chart.tsx  distribution-chart.tsx  heatmap-chart.tsx
dashboard/src/components/layout/: header.tsx  sidebar.tsx
dashboard/src/components/providers/: WebSocketProvider.tsx
dashboard/src/components/ui/: date-range-picker.tsx  stats-card.tsx
dashboard/src/hooks/: useRoleAccess.tsx  useWebSocket.ts
dashboard/src/lib/: api.ts  auth.ts  timezone.ts  utils.ts
docs/: ATTENDANCE_SYSTEM_DESIGN.md  DEPLOYMENT_GUIDE.md  QUICKSTART.md  SETUP_GUIDE.md  STAKEHOLDER_REQUIREMENTS.md
src/eldenops/: __init__.py  __main__.py
src/eldenops/ai/: __init__.py  base.py  router.py
src/eldenops/ai/providers/: __init__.py  claude.py  openai_provider.py
src/eldenops/api/: __init__.py  app.py  deps.py  websocket.py
src/eldenops/api/routes/: __init__.py  analytics.py  attendance.py  auth.py  github.py  goals.py  health.py  projects.py  reports.py  tenants.py  webhooks.py  ws.py
src/eldenops/config/: __init__.py  constants.py  settings.py
src/eldenops/core/: __init__.py  exceptions.py  logging.py  security.py
src/eldenops/db/: __init__.py  engine.py
src/eldenops/db/models/: __init__.py  attendance.py  base.py  discord.py  github.py  project.py  report.py  tenant.py  user.py
src/eldenops/integrations/: __init__.py
src/eldenops/integrations/discord/: __init__.py  bot.py  state.py
src/eldenops/integrations/github/: __init__.py  client.py  webhook.py
src/eldenops/services/attendance/: __init__.py  ai_parser.py  parser.py  service.py
src/eldenops/tasks/: __init__.py  discord_tasks.py  github_tasks.py  report_tasks.py  worker.py
tests/: __init__.py  conftest.py
(+22 files in other folders)
